src/test/ui/type/ascription/issue-60933.stderr
error: casts cannot be followed by a function call
  --> $DIR/issue-60933.rs:3:20
   |
LL |     let _: usize = std::mem:size_of::<u32>();
   |                    ^^^^^^^^-^^^^^^^^^^^^^^
   |                            |
   |                            help: maybe write a path separator here: `::`
   |
   = note: `#![feature(type_ascription)]` lets you annotate an expression with a type: `<expr>: <type>`

error: aborting due to previous error

